--- a/Customer_Churn/customer_churn.ipynb
+++ b/Customer_Churn/customer_churn.ipynb
@@ -6,6 +6,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "    '''\n",
+    "    Project to predict which customers are likely to churn\n,
+    "    Author : Harshit Sati\n",
+    "    Date: 10-09-2021\n",
+    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
